Issue #15011 - Fix PathResource.newResource(String) issue on Microsoft Windows.