@@ -297,22 +297,54 @@ public class PathResource extends Resource
         return newResource(newPath, resolvedUri);
     }
 
+    /**
+     * Resolve the input URI against this PathResource, avoiding the use of various JDK
+     * specific static Path lookup methods that bypass the FileSystem tracking that is
+     * important to PathResource.
+     *
+     * @return the Path object.
+     */
     private Path resolveSchemeSpecificPath(URI uri)
     {
-        // Resolve from this PathResource to maintain FileSystem tracking.
-        // Do NOT use Path.of() or Paths.of() as that requires the JDK to track FileSystem objects.
-        // (Not all FileSystemProvider's track the FileSystems they create. Currently only ZipFileSystemProvider does)
+        /* IMPORTANT NOTE: The following static JDK methods should NOT be used in this method.
+         * - java.nio.file.Path.of(String, String ...)
+         * - java.nio.file.Path.of(URI)
+         * - java.nio.file.Paths.get(String, String ...)
+         * - java.nio.file.Paths.get(URI)
+         */
 
         String scheme = Objects.requireNonNull(uri.getScheme(), "scheme cannot be null");
-        if (scheme.equals("jar"))
+        return switch (scheme)
         {
-            String ssp = uri.getSchemeSpecificPart();
-            int idx = ssp.indexOf("!/");
-            if (idx == -1)
-                throw new IllegalArgumentException("Unable to find jar !/ deep reference in " + uri);
-            return path.resolve(ssp.substring(idx + 1));
-        }
-        return path.resolve(uri.getPath());
+            case "jar" ->
+            {
+                String ssp = uri.getSchemeSpecificPart();
+                int idx = ssp.indexOf("!/");
+                if (idx == -1)
+                    throw new IllegalArgumentException("Unable to find jar !/ deep reference in " + uri);
+                yield path.resolve(ssp.substring(idx + 1));
+            }
+            case "file" ->
+            {
+                /* We want to use Path.resolve(String) to find the new path.
+                 * Ideally we could just use the URI.getPath() directly, which would be a fully qualified path string.
+                 * However, on Microsoft Windows, this becomes problem, as the uri parameter could be `file:///E:/path/to/test.txt`
+                 * Which would mean the URI.getPath() would return `/E:/path/to/test.txt`, which is invalid for Path.resolve(String).
+                 */
+                String base = uri.getPath();
+                // is this a Microsoft Windows URI path?
+                if (base.matches("^/[a-zA-Z]:/.*"))
+                    base = base.substring(1); // strip first char to make it valid for Path.resolve(String)
+                yield path.getFileSystem().getPath(base);
+            }
+            default ->
+            {
+                // Resolve from this PathResource to maintain FileSystem tracking.
+                // Do NOT use Path.of() or Paths.of() as that requires the JDK to track FileSystem objects.
+                // (Not all FileSystemProvider's track the FileSystems they create. Currently only ZipFileSystemProvider does)
+                yield path.resolve(uri.getPath());
+            }
+        };
     }
 
     /**
